force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Allow_Waitlisting__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Allow_Waitlisting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled Volunteers can signup for this Job and related Shifts even when full.</inlineHelpText>
    <label>Allow Waitlisting</label>
    <type>Checkbox</type>
</CustomField>