force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Application_End__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_End__c</fullName>
    <description>When the volunteer application closes for this Job. Mapped post-install to the Form Template Source End Date override. Blank means the Form Template&apos;s own close date applies.</description>
    <inlineHelpText>Optional: when applications close for this Job. Leave blank to use the Form Template&apos;s close date.</inlineHelpText>
    <label>Application End</label>
    <type>DateTime</type>
</CustomField>