force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Application_Start__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Application_Start__c</fullName>
    <description>When the volunteer application opens for this Job. Mapped post-install to the Form Template Source Start Date override. Blank means the Form Template&apos;s own start date applies.</description>
    <inlineHelpText>Optional: when applications open for this Job. Leave blank to use the Form Template&apos;s start date.</inlineHelpText>
    <label>Application Start</label>
    <type>DateTime</type>
</CustomField>