force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Banner_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Banner_Image_URL__c</fullName>
    <formula>If( ISBLANK(FlowToolKit__cUnite_Banner_Image__c),&apos;&apos;,

IF( CONTAINS($Api.Enterprise_Server_URL_100,&apos;/sfsites/c&apos;),

&apos;/sfsites/c&apos;+FlowToolKit__cUnite_Banner_Image__c,

LEFT($Api.Enterprise_Server_URL_100,FIND(&apos;/services/Soap/&apos;, $Api.Enterprise_Server_URL_100)-1)+FlowToolKit__cUnite_Banner_Image__c

))</formula>
    <label>Banner Image URL</label>
    <type>Text</type>
</CustomField>