force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Cancellation_Notice_Hours__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Cancellation_Notice_Hours__c</fullName>
    <description>How much notice helps the team fill a cancelled spot.</description>
    <label>Cancellation Notice Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>