force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Next_Volunteer_Shift__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Next_Volunteer_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Volunteer Shift</label>
    <referenceTo>GW_Volunteers__Volunteer_Shift__c</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>