force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Onsite_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Onsite_Contact_Phone__c</fullName>
    <description>The shift lead phone number promised in the confirmation email.</description>
    <label>On-site Contact Phone</label>
    <type>Phone</type>
</CustomField>