force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Related_Job_1__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Related_Job_1__c</fullName>
    <description>Directional cross-sell slot: another Job this Job promotes on its own page. Not reciprocal, not a group.</description>
    <label>Related Job 1</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>GW_Volunteers__Volunteer_Job__c</referenceTo>
    <relationshipLabel>Related Job 1s</relationshipLabel>
    <relationshipName>Related_Jobs_1</relationshipName>
    <type>Lookup</type>
</CustomField>