force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Remote__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote</label>
    <type>Checkbox</type>
</CustomField>