force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Volunteer_Role__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Volunteer_Role__c</fullName>
    <description>Optional reusable role definition. A Job with no Role behaves exactly as before.</description>
    <label>Volunteer Role</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Volunteer_Role__c</referenceTo>
    <relationshipLabel>Volunteer Roles</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>