force-app-unpackaged-objects/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Waitlist_Limit__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Waitlist_Limit__c</fullName>
    <inlineHelpText>Optionally set the total number of Volunteers that can register for the waitlist.</inlineHelpText>
    <label>Waitlist Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>